<resources>
    <string name="app_name">Trivia</string>
    <string name="activity_main_profile_page">Profile Page</string>
    <string name="activity_main_pop_quiz">Pop Quiz</string>
    <string name="activity_main_questions">Questions</string>
    <string-array name="gender_array">
        <item>Male</item>
        <item>Female</item>
    </string-array>
    <string name="trivia">Trivia Quiz</string>
    <string name="quiz">Quiz</string>
    <string name="playandwin">Play, Win \u0026 Enjoy</string>
    <string name="dots">......</string>
    <string name="profilepageinfo">Please provide the requested details below. This is to enable you gain the full app user experience</string>
    <string name="edittext1">Name</string>
    <string name="edittext2">Email</string>
    <string name="button1">Done</string>
    <string name="button2">Hint</string>
    <string name="button3">Next</string>
    <string name="button4">Send Scores to email</string>
    <string name="checkbox1">Politics</string>
    <string name="checkbox2">Music</string>
    <string name="checkbox3">Movies</string>
    <string name="checkbox4">Geography</string>
    <string name="checkbox5">Dance</string>
    <string name="checkbox6">Art</string>
    <string name="checkbox7">Others</string>
    <string name="menuitem1">About</string>
    <string name="menuitem2">Help \u0026 Feedback</string>
    <string name="menuitem3">Ts \u0026 Cs</string>
    <string name="menuitem4">Privacy Policy</string>
    <string name="menuitem5">Exit</string>
    <string name="answertext1">Well Done!!!</string>
    <string name="answertext2">Score</string>
    <string name="answertext3">Aww, You can always try again!</string>
    <string name="answertext4">Name:</string>
    <string name="answertext5">Gender:</string>
    <string name="answertext6">Email:</string>
    <string name="answertext7">Cool, get your crown next time!</string>
    <string name="answertext8">Awesome, You&#96;re the Trivia god</string>
    <string name="answertext9">Total</string>
    <string name="answertext10">14</string>
    <string name="answertext11">Interests:</string>
    <string name="answertext12">Failed</string>
    <string name="questions">Questions</string>
    <string name="popquizinfo">This trivia quiz is a project app from the Andela, Google \u0026 Udacity ALC Programme for Beginners. Quiz will test your general knowledge about Nigeria and the World. It contains 14 questions in all, Enjoy!!!</string>
    <string name="question1">Which of these is the World&#96;s tallest Building?</string>
    <string name="question2">The longest river in Africa is?</string>
    <string name="question3">The smallest country in the world is?</string>
    <string name="question4">Which of these is the World&#96;s tallest statue?</string>
    <string name="question5">The Nigerian Climate does not include?</string>
    <string name="question6">The Sun rises in the East and sets in the ?</string>
    <string name="question7">The Line that divides the Earth into two is the ?</string>
    <string name="question8">Nigerian Time is how many hours ahead of the Greenwich Mean Time?</string>
    <string name="question9">Which of these art pieces did not originate in Nigeria?</string>
    <string name="question10">A local popular dialect spoken in Nigeria is?</string>
    <string name="question11">Who is on the Twenty Naira Note</string>
    <string name="question12">A popular 90&#96;s Nollywood Movie is?</string>
    <string name="question13">Which of these was a popular hairstyle in the 70&#96;s?</string>
    <string name="question14">Which of these is the oldest dance move here?</string>
    <string name="ques1opt1">Burj Khalifa</string>
    <string name="ques1opt2">Taipei 101</string>
    <string name="ques1opt3">World One Trade Center</string>
    <string name="ques1opt4">Shangai Tower</string>
    <string name="ques2opt1">River Niger</string>
    <string name="ques2opt2">River Orange</string>
    <string name="ques2opt3">River Nile</string>
    <string name="ques2opt4">River Benue</string>
    <string name="ques3opt1">Benin Republic</string>
    <string name="ques3opt2">Germany</string>
    <string name="ques3opt3">Vatican</string>
    <string name="ques3opt4">Poland</string>
    <string name="ques4opt1">Spring Temple Buddha</string>
    <string name="ques4opt2">Christ the Redeemer</string>
    <string name="ques4opt3">Statue of Liberty</string>
    <string name="ques4opt4">The Motherland Calls</string>
    <string name="ques5opt1">Desert</string>
    <string name="ques5opt2">Monsoon</string>
    <string name="ques5opt3">Montane</string>
    <string name="ques5opt4">Tropics</string>
    <string name="ques6opt1">Coast</string>
    <string name="ques6opt2">North</string>
    <string name="ques6opt3">West</string>
    <string name="ques6opt4">South</string>
    <string name="ques7opt1">Equator</string>
    <string name="ques7opt2">Meridian</string>
    <string name="ques7opt3">Solstice</string>
    <string name="ques7opt4">North Pole</string>
    <string name="ques8opt1">Four</string>
    <string name="ques8opt2">Three</string>
    <string name="ques8opt3">Two</string>
    <string name="ques8opt4">One</string>
    <string name="ques9opt1">Igbo Ukwu Pot</string>
    <string name="ques9opt2">Nok Terracotta Head</string>
    <string name="ques9opt3">Bini Ivory Mask</string>
    <string name="ques9opt4">Osun Neck Bead</string>
    <string name="ques10opt1">Creole</string>
    <string name="ques10opt2">Pidgin English</string>
    <string name="ques10opt3">Swahili</string>
    <string name="ques10opt4">Yoruba</string>
    <string name="ques11opt1">Ladi Kwali</string>
    <string name="ques11opt2">Alvan Ikoku</string>
    <string name="ques11opt3">Herbert Macaulay</string>
    <string name="ques11opt4">Obafemi Awolowo</string>
    <string name="ques12opt1">Osoufia in London</string>
    <string name="ques12opt2">OutKast</string>
    <string name="ques12opt3">Mortal Inheritance</string>
    <string name="ques12opt4">Jenifa</string>
    <string name="ques13opt1">Afro</string>
    <string name="ques13opt2">Shade</string>
    <string name="ques13opt3">Perm</string>
    <string name="ques13opt4">Crochet Braids</string>
    <string name="ques14opt1">Alanta</string>
    <string name="ques14opt2">Dab</string>
    <string name="ques14opt3">Slide</string>
    <string name="ques14opt4">Twerk</string>
</resources>
