<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context="com.lebelle.myquizapp.MainActivityQuestions">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="4dp"
        android:text="@string/questions"
        android:textColor="#000"
        android:textSize="25sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="#000"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"/>

    <TextView
        android:id="@+id/questions_text_view"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:gravity="center"
        android:padding="16dp"
        android:text="@string/question1"
        android:textAlignment="center"
        android:textColor="#000"
        android:textSize="25sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="#000"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="8dp"/>

    <RadioGroup
        android:id="@+id/questionOneAnswer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/radiobutton1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:checked="false"
            android:paddingEnd="16dp"
            android:paddingLeft="16dp"
            android:paddingStart="16dp"
            android:text="@string/ques1opt1"
            android:textColor="#000"
            android:textSize="20sp" />

        <RadioButton
            android:id="@+id/radiobutton2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:checked="false"
            android:paddingEnd="16dp"
            android:paddingLeft="16dp"
            android:paddingStart="16dp"
            android:text="@string/ques1opt2"
            android:textColor="#000"
            android:textSize="20sp" />

        <RadioButton
            android:id="@+id/radiobutton3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:checked="false"
            android:paddingEnd="16dp"
            android:paddingLeft="16dp"
            android:paddingStart="16dp"
            android:text="@string/ques1opt3"
            android:textColor="#000"
            android:textSize="20sp" />

        <RadioButton
            android:id="@+id/radiobutton4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:checked="false"
            android:paddingEnd="16dp"
            android:paddingLeft="16dp"
            android:paddingStart="16dp"
            android:text="@string/ques1opt4"
            android:textColor="#000"
            android:textSize="20sp" />

    </RadioGroup>


    <RelativeLayout
        android:id="@+id/parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:background="@drawable/button"
            android:drawableLeft="@drawable/ic_action_bulb"
            android:drawableStart="@drawable/ic_action_bulb"
            android:onClick="hint"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:text="@string/button2" />

        <Button
            android:id="@+id/submit"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:background="@drawable/button"
            android:drawableEnd="@drawable/ic_action_chevron"
            android:drawableRight="@drawable/ic_action_chevron"
            android:onClick="next"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:text="@string/button3" />

    </RelativeLayout>

</LinearLayout>
