<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background"
    android:padding="16dp"
    tools:context="com.lebelle.myquizapp.MainActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center_horizontal"
        android:orientation="vertical">

    <ImageView
        android:id="@+id/photo"
        android:layout_width="380dp"
        android:layout_height="260dp"
        android:scaleType="fitCenter"
        android:src="@drawable/photo"
        android:padding="15dp"
        android:contentDescription="@null"/>


        <TextView
            android:id="@+id/trivia_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/trivia"
            android:textColor="#FFEFD3"
            android:textSize="60sp"
            android:textStyle="bold"
            android:gravity="center"
            android:layout_marginBottom="-30dp"/>

    <TextView
        android:id="@+id/text"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:text="@string/playandwin"
        android:fontFamily="sans-serif-smallcaps"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="#FFEFD3" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dots"
        android:fontFamily="sans-serif-condensed"
        android:textSize="35sp"
        android:textStyle="bold"
        android:textColor="#FFEFD3"
        android:padding="8dp"/>

</LinearLayout>
</RelativeLayout>
