<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/gradient_background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="serif"
            android:padding="14dp"
            android:text="@string/answertext1"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="#FFEFD3"
            android:textSize="22sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:baselineAligned="false"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical"
                android:padding="16dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="serif"
                    android:text="@string/answertext12"
                    android:textAlignment="center"
                    android:textColor="#FFEFD3"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/wrong_score"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="serif"
                    android:textAlignment="center"
                    android:textColor="#FFEFD3"
                    android:textSize="18sp" />
            </LinearLayout>

            <View
                android:layout_width="9dp"
                android:layout_height="match_parent"
                android:background="@drawable/view_line">

            </View>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical"
                android:padding="16dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="serif"
                    android:text="@string/answertext2"
                    android:textAlignment="center"
                    android:textColor="#FFEFD3"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/score"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="serif"
                    android:textAlignment="center"
                    android:textColor="#FFEFD3"
                    android:textSize="20sp" />
            </LinearLayout>
            <View
                android:layout_width="9dp"
                android:layout_height="match_parent"
                android:background="@drawable/view_line">

            </View>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical"
                android:padding="16dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="serif"
                    android:text="@string/answertext9"
                    android:textAlignment="center"
                    android:textColor="#FFEFD3"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="serif"
                    android:text="@string/answertext10"
                    android:textAlignment="center"
                    android:textAllCaps="true"
                    android:textColor="#FFEFD3"
                    android:textSize="20sp"
                    android:textStyle="bold" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="240dp"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/score_image"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@null"
                android:padding="16dp"
                android:scaleType="fitCenter"
                android:src="@drawable/unhappysmiley" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.5"
            android:orientation="vertical">

            <TextView
                android:id="@+id/score_message"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="serif"
                android:padding="8dp"
                android:text="@string/answertext3"
                android:textAlignment="center"
                android:textColor="#FFEFD3"
                android:textSize="18sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:fontFamily="serif"
                    android:padding="8dp"
                    android:text="@string/answertext4"
                    android:textAllCaps="true"
                    android:textColor="#FFEFD3"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/add_name"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="serif"
                    android:padding="8dp"
                    android:textColor="#FFEFD3"
                    android:textSize="15sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:fontFamily="serif"
                    android:padding="8dp"
                    android:text="@string/answertext5"
                    android:textAllCaps="true"
                    android:textColor="#FFEFD3"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/gender"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="serif"
                    android:padding="8dp"
                    android:textColor="#FFEFD3"
                    android:textSize="15sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="serif"
                    android:padding="8dp"
                    android:text="@string/answertext6"
                    android:textAllCaps="true"
                    android:textColor="#FFEFD3"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/mail_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="serif"
                    android:padding="8dp"
                    android:textColor="#FFEFD3"
                    android:textSize="13sp"
                    android:textStyle="bold" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="serif"
                    android:padding="8dp"
                    android:text="@string/answertext11"
                    android:textAllCaps="true"
                    android:textColor="#FFEFD3"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/interest_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="serif"
                    android:padding="8dp"
                    android:textColor="#FFEFD3"
                    android:textSize="15sp"
                    android:textStyle="bold" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</ScrollView>